artiq/test/lit/inferencer/error_array.py
# RUN: %python -m artiq.compiler.testbench.inferencer +diag %s >%t
# RUN: OutputCheck %s --file-to-check=%t

# CHECK-L: ${LINE:+1}: error: array cannot be invoked with the arguments ()
a = array()
